# blog

./: .pre-commit-config.yaml  LICENSE  pyproject.toml
.github/workflows/: publish_post.yml  tests.yaml  tests.yml
blog/timeseries_stateful_filter/: pyproject.toml
posts/github_actions/: post.md  publish_post.py  pyproject.toml
posts/timeseries_stateful_filter/: pyproject.toml  timeseries_stateful_filter.py
